--- a/index.html
+++ b/index.html
@@ -39,79 +39,79 @@
             <li>
               <a class="dropdown" href="#">Books Published</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">Technology Today</a></li>
-                <li><a class="hidden-links" href="">Cutting Edge AI Tools</a></li>
+                <li><a class="hidden-links" href="login.html">Technology Today</a></li>
+                <li><a class="hidden-links" href="login.html">Cutting Edge AI Tools</a></li>
               </ul>
             </li>
             <li id="splitting-to-2columns">
               <a class="dropdown" href="#">అందరి కోసం</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">ముఖచిత్ర కథ</a></li>
-                <li><a class="hidden-links" href="">అంతర్నేత్రం</a></li>
-                <li><a class="hidden-links" href="">వార్తల్లో వ్య్తక్తి</a></li>
-                <li><a class="hidden-links" href="">హెల్త్ టిప్స్</a></li>
-                <li><a class="hidden-links" href="">సెటైర్</a></li>
-                <li><a class="hidden-links" href="">చూడాల్సిన ప్రదేశం</a></li>
-                <li><a class="hidden-links" href="">రేపటి కోసం</a></li>
-                <li><a class="hidden-links" href="">ముఖా ముఖి</a></li>
-                <li><a class="hidden-links" href="">వినాల్సిన పాట</a></li>
-                <li><a class="hidden-links" href="">చదవాల్సిన పుస్తకం</a></li>
-                <li><a class="hidden-links" href="">చూడాల్సిన సినిమా</a></li>
+                <li><a class="hidden-links" href="login.html">ముఖచిత్ర కథ</a></li>
+                <li><a class="hidden-links" href="login.html">అంతర్నేత్రం</a></li>
+                <li><a class="hidden-links" href="login.html">వార్తల్లో వ్య్తక్తి</a></li>
+                <li><a class="hidden-links" href="login.html">హెల్త్ టిప్స్</a></li>
+                <li><a class="hidden-links" href="login.html">సెటైర్</a></li>
+                <li><a class="hidden-links" href="login.html">చూడాల్సిన ప్రదేశం</a></li>
+                <li><a class="hidden-links" href="login.html">రేపటి కోసం</a></li>
+                <li><a class="hidden-links" href="login.html">ముఖా ముఖి</a></li>
+                <li><a class="hidden-links" href="login.html">వినాల్సిన పాట</a></li>
+                <li><a class="hidden-links" href="login.html">చదవాల్సిన పుస్తకం</a></li>
+                <li><a class="hidden-links" href="login.html">చూడాల్సిన సినిమా</a></li>
               </ul>
               <ul class="hidden column2">
-                <li><a class="hidden-links" href="">సాహితీ శిఖరాలు</a></li>
-                <li><a class="hidden-links" href="">జీవన చిత్రాలు</a></li>
-                <li><a class="hidden-links" href="">ఈ నెల స్మరణీయులు</a></li>
-                <li><a class="hidden-links" href="">పండుగ</a></li>
-                <li><a class="hidden-links" href="">పుస్తక సమీక్ష</a></li>
-                <li><a class="hidden-links" href="">సభలు-సత్కారాలు</a></li>
-                <li><a class="hidden-links" href="">గ్రంధావిష్కరణ</a></li>
-                <li><a class="hidden-links" href="">పుస్తక పరిచయం</a></li>
-                <li><a class="hidden-links" href="">సాహితీ పద సుమతి</a></li>
-                <li><a class="hidden-links" href="">చిత్ర కథ-చిత్రకవిత</a></li>
+                <li><a class="hidden-links" href="login.html">సాహితీ శిఖరాలు</a></li>
+                <li><a class="hidden-links" href="login.html">జీవన చిత్రాలు</a></li>
+                <li><a class="hidden-links" href="login.html">ఈ నెల స్మరణీయులు</a></li>
+                <li><a class="hidden-links" href="login.html">పండుగ</a></li>
+                <li><a class="hidden-links" href="login.html">పుస్తక సమీక్ష</a></li>
+                <li><a class="hidden-links" href="login.html">సభలు-సత్కారాలు</a></li>
+                <li><a class="hidden-links" href="login.html">గ్రంధావిష్కరణ</a></li>
+                <li><a class="hidden-links" href="login.html">పుస్తక పరిచయం</a></li>
+                <li><a class="hidden-links" href="login.html">సాహితీ పద సుమతి</a></li>
+                <li><a class="hidden-links" href="login.html">చిత్ర కథ-చిత్రకవిత</a></li>
               </ul>
 
             </li>
             <li>
               <a class="dropdown" href="#">యువత కోసం</a>
               <ul class="hidden yuvatha">
-                <li><a class="hidden-links" href="">GPT-4 (టెక్నాలజీ)</a></li>
-                <li><a class="hidden-links" href="">ఫోటోగ్రఫి పాఠాలు (మూడో కన్ను)</a></li>
-                <li><a class="hidden-links" href="">యువతా తెలుసుకో</a></li>
-                <li><a class="hidden-links" href="">కరెంట్ అఫైర్స్</a></li>
-                <li><a class="hidden-links" href="">Python నేర్చుకోండి</a></li>
-                <li><a class="hidden-links" href="">క్రీడా ప్రపంచం</a></li>
+                <li><a class="hidden-links" href="login.html">GPT-4 (టెక్నాలజీ)</a></li>
+                <li><a class="hidden-links" href="login.html">ఫోటోగ్రఫి పాఠాలు (మూడో కన్ను)</a></li>
+                <li><a class="hidden-links" href="login.html">యువతా తెలుసుకో</a></li>
+                <li><a class="hidden-links" href="login.html">కరెంట్ అఫైర్స్</a></li>
+                <li><a class="hidden-links" href="login.html">Python నేర్చుకోండి</a></li>
+                <li><a class="hidden-links" href="login.html">క్రీడా ప్రపంచం</a></li>
               </ul>
             </li>
             <li>
               <a class="dropdown" href="#">మహిళల కోసం</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">డూడ్లింగ్</a></li>
-                <li><a class="hidden-links" href="">కొత్తగా వస్తున్నాయి</a></li>
-                <li><a class="hidden-links" href="">వంటా వార్పూ</a></li>
-                <li><a class="hidden-links" href="">ఆధ్యాత్మికం</a></li>
+                <li><a class="hidden-links" href="login.html">డూడ్లింగ్</a></li>
+                <li><a class="hidden-links" href="login.html">కొత్తగా వస్తున్నాయి</a></li>
+                <li><a class="hidden-links" href="login.html">వంటా వార్పూ</a></li>
+                <li><a class="hidden-links" href="login.html">ఆధ్యాత్మికం</a></li>
               </ul>
             </li>
             <li>
               <a class="dropdown" href="#">పిల్లలు కోసం</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">పిల్లలు కథ</a></li>
-                <li><a class="hidden-links" href="">పిల్లలు పిడుగుల</a></li>
+                <li><a class="hidden-links" href="login.html">పిల్లలు కథ</a></li>
+                <li><a class="hidden-links" href="login.html">పిల్లలు పిడుగుల</a></li>
               </ul>
             </li>
             <li>
               <a class="dropdown" href="#">కథలు, సీరియల్స్</a>
               <ul class="hidden katha">
-                <li><a class="hidden-links" href="">తనువా ..హరి చందనమే (సరస కథ)</a></li>
-                <li><a class="hidden-links" href="">రాణా ప్రతాప్ (చరిత్రాత్మక సీరియల్)</a></li>
-                <li><a class="hidden-links" href="">గర్భ శ్లోకం (క్రైం సీరియల్)</a></li>
-                <li><a class="hidden-links" href="">కలవరమాయే మదిలో (హాస్యకథ)</a></li>
-                <li><a class="hidden-links" href="">అహింసా పరమో ధర్మః (కథ)</a></li>
-                <li><a class="hidden-links" href="">పరుగులు తీసే నీ వయసునకు(సీరియల్)</a></li>
-                <li><a class="hidden-links" href="">బామ్మ సాహసం (క్రైం కథ)</a></li>
-                <li><a class="hidden-links" href="">చెక్క గుర్రాలు (వాస్తవ కథ)</a></li>
-                <li><a class="hidden-links" href="">చరమాంకం (కథ)</a></li>
-                <li><a class="hidden-links" href="">>పర్సోపాఖ్యానం (కథ)</a></li>
+                <li><a class="hidden-links" href="login.html">తనువా ..హరి చందనమే (సరస కథ)</a></li>
+                <li><a class="hidden-links" href="login.html">రాణా ప్రతాప్ (చరిత్రాత్మక సీరియల్)</a></li>
+                <li><a class="hidden-links" href="login.html">గర్భ శ్లోకం (క్రైం సీరియల్)</a></li>
+                <li><a class="hidden-links" href="login.html">కలవరమాయే మదిలో (హాస్యకథ)</a></li>
+                <li><a class="hidden-links" href="login.html">అహింసా పరమో ధర్మః (కథ)</a></li>
+                <li><a class="hidden-links" href="login.html">పరుగులు తీసే నీ వయసునకు(సీరియల్)</a></li>
+                <li><a class="hidden-links" href="login.html">బామ్మ సాహసం (క్రైం కథ)</a></li>
+                <li><a class="hidden-links" href="login.html">చెక్క గుర్రాలు (వాస్తవ కథ)</a></li>
+                <li><a class="hidden-links" href="login.html">చరమాంకం (కథ)</a></li>
+                <li><a class="hidden-links" href="login.html">>పర్సోపాఖ్యానం (కథ)</a></li>
 
 
 
@@ -120,20 +120,20 @@
             <li>
               <a class="dropdown" href="#">Write to us</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">కవితలు</a></li>
-                <li><a class="hidden-links" href="">కథలు, సీరియల్స్</a></li>
-                <li><a class="hidden-links" href="">others...</a></li>
+                <li><a class="hidden-links" href="login.html">కవితలు</a></li>
+                <li><a class="hidden-links" href="login.html">కథలు, సీరియల్స్</a></li>
+                <li><a class="hidden-links" href="login.html">others...</a></li>
               </ul>
             </li>
             <li>
               <a class="dropdown" href="#">Archive</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">March 2023 Magazine</a></li>
-                <li><a class="hidden-links" href="">April 2023 Magazine</a></li>
+                <li><a class="hidden-links" href="login.html">March 2023 Magazine</a></li>
+                <li><a class="hidden-links" href="login.html">April 2023 Magazine</a></li>
               </ul>
             </li>
-            <li><a href="">LOGIN</a></li>
-            <li><a href="">SUBSCRIBE</a></li>
+            <li><a style="color: black;" href="login.html">LOGIN</a></li>
+            <li><a style="color: black;" href="subscribe.html">SUBSCRIBE</a></li>
           </ul>
         </div>
       </nav>
@@ -746,24 +746,24 @@
 
     if (window.screen.width < 1336) {
 
-        const outsideLIs = document.querySelectorAll('.navbar-links > li');
-        const hidden = document.querySelector('.hidden');
+      const outsideLIs = document.querySelectorAll('.navbar-links > li');
+      const hidden = document.querySelector('.hidden');
 
-        // console.log(outsideLIs);
+      // console.log(outsideLIs);
 
-        outsideLIs.forEach(item => {
-            item.addEventListener('click', (event) => {
-               
-                item.querySelector('.hidden').classList.toggle('hide-show');
-                // console.log(item.querySelector('.hidden').classList.contains('hide-show'))
+      outsideLIs.forEach(item => {
+        item.addEventListener('click', (event) => {
 
-            });
+          item.querySelector('.hidden').classList.toggle('hide-show');
+          // console.log(item.querySelector('.hidden').classList.contains('hide-show'))
+
         });
+      });
     }
 
 
 
-</script>
+  </script>
 </body>
 
 </html>
