--- a/sumathi.html
+++ b/sumathi.html
@@ -40,24 +40,24 @@
             <li>
               <a class="dropdown" href="#">Books Published</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">Technology Today</a></li>
-                <li><a class="hidden-links" href="">Cutting Edge AI Tools</a></li>
+                <li><a class="hidden-links" href="pdf/Technology Today.pdf">Technology Today</a></li>
+                <li><a class="hidden-links" href="pdf/Cutting Edge.pdf">Cutting Edge AI Tools</a></li>
               </ul>
             </li>
             <li id="splitting-to-2columns">
               <a class="dropdown" href="#">అందరి కోసం</a>
               <ul class="hidden">
-                <li><a class="hidden-links" href="">ముఖచిత్ర కథ</a></li>
-                <li><a class="hidden-links" href="">అంతర్నేత్రం</a></li>
-                <li><a class="hidden-links" href="">వార్తల్లో వ్య్తక్తి</a></li>
-                <li><a class="hidden-links" href="">హెల్త్ టిప్స్</a></li>
-                <li><a class="hidden-links" href="">సెటైర్</a></li>
-                <li><a class="hidden-links" href="">చూడాల్సిన ప్రదేశం</a></li>
-                <li><a class="hidden-links" href="">రేపటి కోసం</a></li>
-                <li><a class="hidden-links" href="">ముఖా ముఖి</a></li>
-                <li><a class="hidden-links" href="">వినాల్సిన పాట</a></li>
-                <li><a class="hidden-links" href="">చదవాల్సిన పుస్తకం</a></li>
-                <li><a class="hidden-links" href="">చూడాల్సిన సినిమా</a></li>
+                <li><a class="hidden-links" href="pdf/mukhachitrakatha.pdf">ముఖచిత్ర కథ</a></li>
+                <li><a class="hidden-links" href="pdf/Antarnetram.pdf">అంతర్నేత్రం</a></li>
+                <li><a class="hidden-links" href="pdf/vartallovyakthi.pdf">వార్తల్లో వ్య్తక్తి</a></li>
+                <li><a class="hidden-links" href="pdf/healthtips.pdf">హెల్త్ టిప్స్</a></li>
+                <li><a class="hidden-links" href="pdf/sytar.pdf">సెటైర్</a></li>
+                <li><a class="hidden-links" href="pdf/chudalsinapredesam.pdf">చూడాల్సిన ప్రదేశం</a></li>
+                <li><a class="hidden-links" href="pdf/repatikosam.pdf">రేపటి కోసం</a></li>
+                <li><a class="hidden-links" href="pdf/mukhamukhi.pdf">ముఖా ముఖి</a></li>
+                <li><a class="hidden-links" href="pdf/vinalsina paata.pdf">వినాల్సిన పాట</a></li>
+                <li><a class="hidden-links" href="pdf/chadavalsina pustakham.pdf">చదవాల్సిన పుస్తకం</a></li>
+                <li><a class="hidden-links" href="pdf/chudalsina cinema.pdf">చూడాల్సిన సినిమా</a></li>
               </ul>
               <ul class="hidden column2">
                 <li><a class="hidden-links" href="">సాహితీ శిఖరాలు</a></li>
@@ -133,8 +133,8 @@
                 <li><a class="hidden-links" href="">April 2023 Magazine</a></li>
               </ul>
             </li>
-            <li><a href="">LOGIN</a></li>
-            <li><a href="">SUBSCRIBE</a></li>
+            <li><a style="color: black;" href="login.html">LOGIN</a></li>
+            <li><a style="color: black;" href="subscribe.html">SUBSCRIBE</a></li>
           </ul>
         </div>
       </nav>
@@ -434,13 +434,13 @@
             </div>
           </li>
 
-          <!-- <li class="navbar-li navbar-li10">
+          <li class="navbar-li navbar-li10">
             <div class="wrap">
               <a class="navbar-a" href="#">Subscribe</a>
             </div>
           </li> -->
         </ul>
-      </nav> -->
+      </nav>
 
     </header>
 
@@ -462,7 +462,7 @@
                 </a>
               </div>
               <div class="month">JUNE 2024</div>
-              <div class="download"><a href="">>CLICK TO OPEN</a</div>
+              <div class="download"><a href="">CLICK TO OPEN</a</div>
             </div>
           
         </div>
