--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
                 <li><a class="hidden-links" href="login.html">వినాల్సిన పాట</a></li>
                 <li><a class="hidden-links" href="login.html">చదవాల్సిన పుస్తకం</a></li>
                 <li><a class="hidden-links" href="login.html">చూడాల్సిన సినిమా</a></li>
-              </ul>
-              <ul class="hidden column2">
                 <li><a class="hidden-links" href="login.html">సాహితీ శిఖరాలు</a></li>
                 <li><a class="hidden-links" href="login.html">జీవన చిత్రాలు</a></li>
                 <li><a class="hidden-links" href="login.html">ఈ నెల స్మరణీయులు</a></li>
@@ -653,7 +651,7 @@
 
       </section>
 
-      <!-- <section class="sec section4">
+      <section class="sec section4">
         <div class="tv-channel">
           <div class="head"><a href="https://www.youtube.com/@SumathiTVchannel">SUMATHI TV CHANNEL</a></div>
           <div class="videos-wrapper">
@@ -705,7 +703,7 @@
           </div>
 
         </div>
-      </section> -->
+      </section>
 
     </main>
 
