--- a/sumathi.html
+++ b/sumathi.html
@@ -131,8 +131,8 @@
                 <li><a class="hidden-links" href="pdf/sumathi-april2023_.pdf">April 2023 Magazine</a></li>
               </ul>
             </li>
-            <li><a style="color: black;" href="login.html">LOGIN</a></li>
-            <li><a style="color: black;" href="subscribe.html">SUBSCRIBE</a></li>
+            <!-- <li><a style="color: black;" href="login.html">LOGIN</a></li>
+            <li><a style="color: black;" href="subscribe.html">SUBSCRIBE</a></li> -->
           </ul>
         </div>
       </nav>
