--- a/sumathi.html
+++ b/sumathi.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- <!DOCTYPE html> -->
+<html lang="en" writingsuggestions>
 
 <head>
   <meta charset="UTF-8">
@@ -433,8 +433,8 @@
   </div>
   <script>
 
-    const screenWidth = window.screen.width;
-    console.log(screenWidth);
+    // const screenWidth = window.screen.width;
+    // console.log(screenWidth);
 
     if (window.screen.width < 1336) {
 
