--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" writtingsuggestions>
 
 <head>
   <meta charset="UTF-8">
@@ -739,8 +739,8 @@
   </div>
   <script>
 
-    const screenWidth = window.screen.width;
-    console.log(screenWidth);
+    // const screenWidth = window.screen.width;
+    // console.log(screenWidth);
 
     if (window.screen.width < 1336) {
 
